# wake3d

./: .gitignore  CMakeLists.txt  README.md  configure.sh
example/template.s76.rotor/: README  input.wake3d  run.qsub  setup.initial.sh  setup.restart.sh
example/template.s76.rotor/group0/: input.dg4est.v2  input.dg4est.v2.initial  input.dg4est.v2.restart
example/template.s76.rotor/group1/: input.nsu3d  input.nsu3d.restart  mesh_file.replicate  mesh_file.replicate.initial  mesh_file.replicate.restart
example/template.s76.rotor/group1/originals/: input.nsu3d.initial  mesh_file.replicate.initial
example/template.s76.rotor/group2/: input.nsu3d.initial  mesh_file.replicate.restart
example/template.s76.rotor/group2/originals/: input.nsu3d.restart
src/: CMakeLists.txt  alloc.c  alloc.h  colors.h  defs.h  driver.c  driver.h  flow_interface.c  input.c  input.h  main.c  search_p4est.c  tioga_interface.c  visit_interface.c
